apply plugin: 'com.android.application'

repositories {
    maven {
        // URL can refer to a local directory
        url "./lib/"
    }

}

android {
    compileSdkVersion 25
    buildToolsVersion "25.0.3"
    defaultConfig {
        applicationId "com.bikeonet.android.dslrbrowser"
        minSdkVersion 24
        targetSdkVersion 25
        versionCode 10
        versionName "1.0.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        pickFirst 'META-INF/beans.xml'
    }

    lintOptions {
        disable 'InvalidPackage'
        abortOnError false
    }
}



dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    wearApp project(':wear')
    compile 'com.google.android.gms:play-services-wearable:10.2.4'
    compile "com.android.support:support-v4:25.3.1"
    compile 'com.android.support:appcompat-v7:25.3.1'
    compile 'com.android.support:design:25.3.1'
    compile 'com.android.support:recyclerview-v7:25.3.1'
    compile 'org.fourthline.cling:cling-core:2.1.2-SNAPSHOT'
    compile 'org.fourthline.cling:cling-support:2.1.2-SNAPSHOT'
    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.1.8.v20121106'
    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '8.1.8.v20121106'
    compile group: 'org.eclipse.jetty', name: 'jetty-client', version: '8.1.8.v20121106'
    testCompile 'junit:junit:4.12'
}
